guida/src/app/components/PostItem/PostItem.module.css
.post {
  background-color: #494949;
  border-radius: 8px;
  margin: 10px 0;
  padding: 30px;
  list-style: none;
  cursor: pointer;
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  transition: background 0.3s ease, transform 0.3s ease;
}

.post:hover{
  background: #838383;
  transform: scale(1.05);
}

.postContent h2 {
  margin: 0;
  font-size: 1rem;
}
.postContent h3 {
  margin: 0;
  font-size: 0.8rem;
}
.postContent p {
  margin: 0;
  font-size: 0.7rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.postContent {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
  width: auto;
}

